[package]
name = "kuksa_app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sample_provider"
path = "src/sample_provider.rs"

[workspace.dependencies]
clap = { version = "4.2", default-features = false }
databroker-proto = { path = "../kuksa-databroker/databroker-proto" }
# prost has no features
prost = "0.12.6"
# prost-types has no features
prost-types = "0.12.6"
# tokio does not enable features by default
tokio = "1.17.0"
# tokio-stream has no features
tokio-stream = "0.1.8"
tonic = { version = "0.11.0", default-features = false }
tonic-build = { version = "0.11.0", default-features = false }


[dependencies]
kuksa-common = { path = "../kuksa-databroker/lib/common"}
kuksa = { path = "../kuksa-databroker/lib/kuksa"}
kuksa-sdv = { path = "../kuksa-databroker/lib/sdv"}
databroker-proto = { workspace = true }
tonic = { workspace = true, features = ["transport", "channel", "prost"] }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tokio-stream = { workspace = true, features = ["sync"] }
linefeed = "0.6"
ansi_term = "0.12"
clap = { workspace = true, features = [
    "std",
    "env",
    "derive",
    "help",
    "error-context",
    "usage",
] }
regex = "1.6.0"
http = "0.2.8"


